# niinku

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  release-please-config.json
.github/workflows/: assemble.yml  ci.yml  ingest.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs  main.rs
crates/sources/: Cargo.toml  build.rs
crates/sources/src/: curated.rs  lib.rs  mastodon.rs  mastodon_ingest.rs  opensubtitles.rs  suomi24.rs  tokenize.rs  urbaani.rs  voikko.rs
data/: allowlist.txt  curated-fi.txt  denylist.txt
