[workspace]
resolver = "2"
members = ["crates/cli", "crates/pipeline", "crates/sources"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/laurigates/niinku"
authors = ["Lauri Gates"]
version = "0.0.1" # x-release-please-version

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
voikko-rs = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["tls"] }
