[package]
name = "niinku-cli"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
version.workspace = true

[[bin]]
name = "niinku"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
niinku-pipeline = { path = "../pipeline" }
niinku-sources = { path = "../sources" }
