[package]
name = "niinku-sources"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
version.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
voikko-rs.workspace = true
niinku-pipeline = { path = "../pipeline" }

[build-dependencies]
pkg-config = "0.3"
